# agoraelectoral

./: .aws  .azure  .bash_history  .eslintrc.cjs  .gitconfig  .gitignore  .viminfo  GEMINI.md  README.md  docker-compose.yml  eslint.config.js  generateServices.js  index.html  limpiar_config_frontend.sh  netlify.toml  package-lock.json  package.json  turbo.json  vitest.config.ts
.config/turborepo/: telemetry.json
.docker/: .token_seed  contexts  features.json
.docker/buildx/: .buildNodeID
.github/workflows/: ci.yml
.turbo/cache/: 0f58e0ac2b4e3b5e-meta.json  24ae6a38061b3876-meta.json  24ae6a38061b3876.tar.zst  497b761a91ddb132-meta.json  497b761a91ddb132.tar.zst  49fcf73728b20c91-meta.json  49fcf73728b20c91.tar.zst  63571de26779a73e-meta.json  63571de26779a73e.tar.zst  8a6ad5366483e275-meta.json  ab84c5d1b72e95a8-meta.json  ab84c5d1b72e95a8.tar.zst  be7cb5a5900e1248-meta.json  be7cb5a5900e1248.tar.zst  ce202591c2e6839c-meta.json  ce202591c2e6839c.tar.zst  e8d0d85c4f1253d6-meta.json  e8d0d85c4f1253d6.tar.zst
frontend/: Dockerfile  index.html  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  setupTests.ts  supabaseClient.ts
k8s/: analytics-deployment.yaml  auth-deployment.yaml  crm-deployment.yaml  crm-service.yaml  frontend-deployment.yaml  frontend-service.yaml  maps-deployment.yaml  maps-service.yaml  mcp-deployment.yaml  mcp-service.yaml  notifications-deployment.yaml  notifications-service.yaml  redis-deployment.yaml
services/analytics-service/: .env.example  Dockerfile  pyproject.toml
services/auth-service/: .env.example  Dockerfile  package.json  pyproject.toml
services/auth-service/app/: main.py
services/auth-service/app/api/v1/endpoints/: health.py  users.py
services/auth-service/app/core/: config.py  db.py  security.py
services/auth-service/app/models/: user.py
services/auth-service/app/schemas/: user.py
services/auth-service/src/: index.ts
services/auth-service/tests/: test_main.py
services/crm-service/: .env.example  Dockerfile  package.json  pyproject.toml
services/maps-service/: .env.example  .eslintrc.js  Dockerfile  package.json  pyproject.toml
services/maps-service/app/: main.py
services/maps-service/src/: index.js
services/maps-service/src/config/: redis.js
services/maps-service/src/controllers/: mapsController.js  mapsController.test.js
services/maps-service/src/routes/: mapsRoutes.js
services/mcp-service/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml  test-redis.js  test-redis.ts
services/mcp-service/app/: main.py
services/mcp-service/src/: index.js  index.ts
services/mcp-service/src/llm/: gemini.js  gemini.ts
services/mcp-service/src/routes/: analyze.js  analyze.ts  memory.js  memory.ts
services/mcp-service/src/vectorstore/: redis.js  redis.ts
services/notifications-service/: .env.example  Dockerfile  pyproject.toml
services/notifications-service/app/: main.py
src/: App.tsx  index.css  main.tsx  supabaseClient.ts
(+63 files in other folders)
