[tool.poetry]
name = "mcp-service"
version = "0.1.0"
description = "MCP Service in Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["app"]
