[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = "Microservice for handling notifications."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["app"]
